--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,8 @@ jobs:
           pytest tests/test_login.py --html=report.html
 
       - name: Upload test report artifact
-        uses: actions/upload-artifact@v3
-        with:
+      - uses: actions/upload-artifact@v4
+      with:
           name: Test Report
           path: report.html
 
